package command;

public class Fan {
    public void start() { System.out.println("Fan started"); }
    public void stop()  { System.out.println("Fan stopped"); }
}
