package command;

public class Light {
    public void turnOn()  { System.out.println("Light is ON"); }
    public void turnOff() { System.out.println("Light is OFF"); }
}
